kubernetes/2-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: omallen/site-speak-api:0.0.${GITHUB_RUN_NUMBER}
        ports:
        - containerPort: 5000
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "5"]
