kubernetes/2-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template: # pod starts here
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:18
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
        - name: data
          mountPath: /var/lib/postgresql
      volumes:
      - name: init-sql
        configMap:
          name: init-sql
      - name: data
        persistentVolumeClaim:
          claimName: postgres-pvc
