kubernetes/2-site-speak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: site-speak-deployment
  labels:
    app: site-speak
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: site-speak
  template:
    metadata:
      labels:
        app: site-speak
    spec:
      containers:
      - name: site-speak
        image: omallen/site-speak:0.0.${GITHUB_RUN_NUMBER}
        ports:
        - containerPort: 80
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "5"]
