kubernetes/9-db-backup-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site-speak-db-backup
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backup-storage
  namespace: site-speak-db-backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backup-storage
  template:
    metadata:
      labels:
        app: backup-storage
    spec:
      containers:
      - name: storage
        image: alpine:latest
        command: ["/bin/sh", "-c", "tail -f /dev/null"]
        volumeMounts:
        - name: backup-vol
          mountPath: /backups
      volumes:
      - name: backup-vol
        persistentVolumeClaim:
          claimName: postgres-backup-pvc
