kubernetes/2-blackbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: blackbox-exporter
  labels:
    app: blackbox-exporter
spec:
  selector:
    app: blackbox-exporter
  ports:
    - protocol: TCP
      port: 9115
      targetPort: 9115
      name: http
  type: ClusterIP
