kubernetes/2-loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: ${NAMESPACE}
spec:
  selector:
    app: loki
  ports:
  - name: http
    protocol: TCP
    port: 3100
    targetPort: 3100
  type: ClusterIP
