kubernetes/2-otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: ${NAMESPACE}
spec:
  selector:
    app: collector
  ports:
  - name: otlp-http
    protocol: TCP
    port: 4318
    targetPort: 4318
  - name: prometheus
    protocol: TCP
    port: 8889
    targetPort: 8889
  type: ClusterIP
