kubernetes/2-site-speak-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: site-speak-service
  labels:
    app: site-speak
spec:
  selector:
    app: site-speak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
